--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Merriweather:ital,wght@1,900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -7,13 +8,15 @@
 
 body {
   height: 100vh;
-  width: 100vh;
+  width: 100vw;
   overflow: hidden;
   background-color: #202020;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  font-family: inter;
+  font-weight: bold;
 }
 body #mainClicker {
   height: 4em;
@@ -26,13 +29,26 @@ body .disabled {
   pointer-events: none;
   opacity: 0.4;
 }
-body .controller {
+body #controllers {
+  display: flex;
+  flex-direction: column;
+}
+body #controllers .controller {
+  margin: 5px;
   height: 100px;
   width: 100px;
   position: relative;
+  background-color: rgb(255, 210, 127);
+  border: 0;
+  padding: 2em;
 }
-body .controller .cont {
+body #controllers .controller .cont {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: 1em;
+  right: 1em;
+}
+body #controllers .controller .prix {
+  position: absolute;
+  top: 1em;
+  left: 1em;
 }/*# sourceMappingURL=style.css.map */
