--- a/style.css
+++ b/style.css
@@ -29,16 +29,20 @@ body .disabled {
   pointer-events: none;
   opacity: 0.4;
 }
+body .disabled .prix {
+  color: red;
+  font-weight: bold;
+}
 body #controllers {
   display: flex;
   flex-direction: column;
 }
 body #controllers .controller {
   margin: 5px;
-  height: 100px;
-  width: 100px;
+  height: 5rem;
+  width: 30rem;
   position: relative;
-  background-color: rgb(255, 210, 127);
+  background-color: rgb(190, 190, 190);
   border: 0;
   padding: 2em;
 }
@@ -46,6 +50,8 @@ body #controllers .controller .cont {
   position: absolute;
   bottom: 1em;
   right: 1em;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 body #controllers .controller .prix {
   position: absolute;
