--- a/style.css
+++ b/style.css
@@ -18,11 +18,34 @@ body {
   font-family: inter;
   font-weight: bold;
 }
-body #mainClicker {
-  height: 4em;
-  width: 4rem;
+body #main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 3rem;
+  height: 80rem;
+  align-items: center;
 }
-body #score {
+body #main #mainClicker {
+  background-color: transparent;
+  border: none;
+  height: 20rem;
+  width: 20rem;
+  margin-top: auto;
+  margin-bottom: 5rem;
+  background-image: url(./assets/Gumball.png);
+  background-size: 100%;
+  transition: 0.3s;
+}
+body #main #mainClicker:hover {
+  transform: scale(1.2);
+  transition: 0.3s;
+}
+body #main #mainClicker:active {
+  transform: scale(0.9);
+  transition: 0.3s;
+}
+body #main #score, body #main #perSec {
   color: white;
 }
 body .disabled {
@@ -36,15 +59,31 @@ body .disabled .prix {
 body #controllers {
   display: flex;
   flex-direction: column;
+  right: 1rem;
+  top: 1rem;
 }
 body #controllers .controller {
   margin: 5px;
   height: 5rem;
-  width: 30rem;
+  width: 25rem;
   position: relative;
   background-color: rgb(190, 190, 190);
   border: 0;
   padding: 2em;
+}
+body #controllers .controller .multname {
+  font-size: 2rem;
+  position: absolute;
+  top: 0;
+  left: 7rem;
+  color: white;
+  font-weight: bold;
+  text-shadow: 1px 1px 0 black;
+}
+body #controllers .controller .valeur {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
 }
 body #controllers .controller .cont {
   position: absolute;
@@ -55,6 +94,27 @@ body #controllers .controller .cont {
 }
 body #controllers .controller .prix {
   position: absolute;
-  top: 1em;
-  left: 1em;
+  bottom: 1em;
+  left: 7rem;
+  font-weight: bold;
+}
+body #controllers #controller-1 {
+  background-image: url(./assets/Gumlins.png);
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+}
+body #controllers #controller-2 {
+  background-image: url(./assets/SuperGumlins.png);
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+}
+body #controllers #controller-3 {
+  background-image: url(./assets/HyperGumlins.png);
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+}
+body #controllers #controller-4 {
+  background-image: url(./assets/MetaGumlins.png);
+  background-repeat: no-repeat;
+  background-size: auto 100%;
 }/*# sourceMappingURL=style.css.map */
