--- a/style.css
+++ b/style.css
@@ -10,13 +10,14 @@ body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  background-color: #202020;
+  background-color: #e1bfe6;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   font-family: inter;
   font-weight: bold;
+  padding: 1rem;
 }
 body #main {
   display: flex;
@@ -47,74 +48,76 @@ body #main #mainClicker:active {
 }
 body #main #score, body #main #perSec {
   color: white;
+  font-size: 1.7rem;
+  font-weight: bolder;
+  text-shadow: 0.1rem 0.1rem 0 rgb(175, 105, 140);
 }
 body .disabled {
   pointer-events: none;
   opacity: 0.4;
+  transition: 0.3s;
 }
 body .disabled .prix {
-  color: red;
+  color: rgb(107, 22, 146);
   font-weight: bold;
 }
-body #controllers {
+body #shop {
   display: flex;
   flex-direction: column;
   right: 1rem;
   top: 1rem;
+  bottom: 1rem;
 }
-body #controllers .controller {
+body #shop .controller {
   margin: 5px;
   height: 5rem;
   width: 25rem;
   position: relative;
-  background-color: rgb(190, 190, 190);
+  background-color: rgb(156, 113, 180);
   border: 0;
   padding: 2em;
+  border-radius: 1rem;
+  border: 1rem solid rgb(156, 113, 180);
+  box-shadow: 0 0.5rem rgb(75, 47, 94);
+  transition: 0.3s;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
 }
-body #controllers .controller .multname {
-  font-size: 2rem;
+body #shop .controller .multname {
+  font-size: 1.5rem;
   position: absolute;
-  top: 0;
-  left: 7rem;
+  top: 0rem;
+  left: 5rem;
   color: white;
   font-weight: bold;
   text-shadow: 1px 1px 0 black;
 }
-body #controllers .controller .valeur {
+body #shop .controller .valeur {
   position: absolute;
-  right: 1rem;
-  top: 1rem;
+  right: 0rem;
+  top: 0rem;
 }
-body #controllers .controller .cont {
+body #shop .controller .cont {
   position: absolute;
-  bottom: 1em;
-  right: 1em;
+  bottom: 0em;
+  right: 0em;
   font-size: 1.5rem;
   font-weight: bold;
 }
-body #controllers .controller .prix {
+body #shop .controller .prix {
   position: absolute;
-  bottom: 1em;
-  left: 7rem;
+  bottom: 0em;
+  left: 5rem;
   font-weight: bold;
 }
-body #controllers #controller-1 {
-  background-image: url(./assets/Gumlins.png);
-  background-repeat: no-repeat;
-  background-size: auto 100%;
-}
-body #controllers #controller-2 {
-  background-image: url(./assets/SuperGumlins.png);
-  background-repeat: no-repeat;
-  background-size: auto 100%;
-}
-body #controllers #controller-3 {
-  background-image: url(./assets/HyperGumlins.png);
-  background-repeat: no-repeat;
-  background-size: auto 100%;
-}
-body #controllers #controller-4 {
-  background-image: url(./assets/MetaGumlins.png);
-  background-repeat: no-repeat;
-  background-size: auto 100%;
+
+@media screen and (min-width: 800px) {
+  body {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  body #main {
+    height: auto;
+  }
 }/*# sourceMappingURL=style.css.map */
