--- a/style.scss
+++ b/style.scss
@@ -11,13 +11,14 @@ body{
     height:100vh;
     width:100vw;
     overflow:hidden;
-    background-color:#202020;
+    background-color:#e1bfe6;
     display:flex;
     justify-content: space-evenly;
     align-items:center;
     flex-direction: column;
     font-family:inter;
     font-weight:bold;
+    padding:1rem;
 
 
     #main{
@@ -52,25 +53,30 @@ body{
 
     #score, #perSec{
         color:white;
+        font-size:1.7rem;
+        font-weight:bolder;
+        text-shadow:0.1rem 0.1rem 0 rgb(175, 105, 140);
+
     }
 }
 
     .disabled{
         pointer-events: none;
         opacity:0.4;
+        transition: 0.3s;
 
         .prix{
-            color:red;
+            color:rgb(107, 22, 146);
             font-weight:bold;
         }
     }
 
-    #controllers{
+    #shop{
         display:flex;
         flex-direction: column;
         right:1rem;
         top:1rem;
-
+        bottom:1rem;
         
 
 
@@ -80,15 +86,21 @@ body{
         height:5rem;
         width:25rem;
         position:relative;
-        background-color: rgb(190, 190, 190);
+        background-color: rgb(156, 113, 180);
         border:0;
         padding:2em;
+        border-radius:1rem;
+        border:1rem solid rgb(156, 113, 180);
+        box-shadow:0 0.5rem rgb(75, 47, 94);
+        transition: 0.3s;
+        background-repeat:no-repeat;
+        background-size:auto 100%;
 
         .multname{
-            font-size:2rem;
+            font-size:1.5rem;
             position:absolute;
-            top:0;
-            left:7rem;
+            top:0rem;
+            left:5rem;
             color:white;
             font-weight:bold;
             text-shadow: 1px 1px 0 black;
@@ -96,54 +108,39 @@ body{
 
         .valeur{
             position:absolute;
-            right:1rem;
-            top:1rem;
+            right:0rem;
+            top:0rem;
         }
 
         .cont{
             position:absolute;
-            bottom:1em;
-            right:1em;
+            bottom:0em;
+            right:0em;
             font-size:1.5rem;
             font-weight:bold;
         }
 
         .prix{
             position:absolute;
-            bottom:1em;
-            left:7rem;
+            bottom:0em;
+            left:5rem;
             font-weight:bold;
         }
     }
 
-    #controller-1{
-        background-image:url(./assets/Gumlins.png);
-        background-repeat:no-repeat;
-        background-size:auto 100%;
-    }
-
-    #controller-2{
-        background-image:url(./assets/SuperGumlins.png);
-        background-repeat:no-repeat;
-        background-size:auto 100%;
-    }
-
-    #controller-3{
-        background-image:url(./assets/HyperGumlins.png);
-        background-repeat:no-repeat;
-        background-size:auto 100%;
-    }
-    #controller-4{
-        background-image:url(./assets/MetaGumlins.png);
-        background-repeat:no-repeat;
-        background-size:auto 100%;
-    }
-
-
-
+}
 
 
 }
 
+@media screen and (min-width:800px){
+    body{
+        flex-direction:row;
+        justify-content: space-evenly;
+        align-items: center;
 
+        #main{
+            height:auto;
+        }
+    }
 }
