--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
+  min-height: 100vh;
+  min-width: 100vw;
+  overflow-x: hidden;
   background-color: #e1bfe6;
   display: flex;
   justify-content: space-evenly;
@@ -23,8 +23,7 @@ body #main {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin-top: 3rem;
-  height: 80rem;
+  margin-top: 6rem;
   align-items: center;
 }
 body #main #mainClicker {
@@ -32,10 +31,11 @@ body #main #mainClicker {
   border: none;
   height: 20rem;
   width: 20rem;
-  margin-top: auto;
+  margin-top: 5rem;
   margin-bottom: 5rem;
-  background-image: url(./assets/Gumball.png);
-  background-size: 100%;
+  background-image: url(./assets2/Gumball.png);
+  background-size: auto 100%;
+  background-repeat: no-repeat;
   transition: 0.3s;
 }
 body #main #mainClicker:hover {
@@ -51,6 +51,27 @@ body #main #score, body #main #perSec {
   font-size: 1.7rem;
   font-weight: bolder;
   text-shadow: 0.1rem 0.1rem 0 rgb(175, 105, 140);
+}
+body #upgrades {
+  display: grid;
+  max-width: 50vw;
+  gap: 1rem;
+}
+body #upgrades .upgrade {
+  border: 0;
+  padding: 1rem;
+  border-radius: 1rem;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+body #upgrades .locked {
+  background-color: rgb(121, 80, 197);
+  box-shadow: 0 0.5rem 0 rgb(61, 26, 71);
+}
+body #upgrades .unlocked {
+  background-color: rgb(224, 142, 33);
+  box-shadow: 0 0.5rem 0 rgb(146, 103, 24);
 }
 body .disabled {
   pointer-events: none;
@@ -111,7 +132,7 @@ body #shop .controller .prix {
   font-weight: bold;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
   body {
     flex-direction: row;
     justify-content: space-evenly;
