--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   min-height: 100vh;
   min-width: 100vw;
   overflow-x: hidden;
-  background-color: #e1bfe6;
+  background-color: #4f6c74;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -18,6 +18,8 @@ body {
   font-family: inter;
   font-weight: bold;
   padding: 1rem;
+  margin: 0;
+  padding: 0;
 }
 body #main {
   display: flex;
@@ -50,13 +52,13 @@ body #main #score, body #main #perSec {
   color: white;
   font-size: 1.7rem;
   font-weight: bolder;
-  text-shadow: 0.1rem 0.1rem 0 rgb(175, 105, 140);
+  text-shadow: 0.1rem 0.1rem 0 rgb(72, 128, 155);
 }
 body #reset {
   position: absolute;
   top: 2rem;
   left: 2rem;
-  background-color: #8d6a94;
+  background-color: #5ca5bb;
   border: none;
   padding: 1rem;
   border-radius: 1rem;
@@ -66,7 +68,7 @@ body #seeachievements {
   position: absolute;
   top: 2rem;
   left: 7rem;
-  background-color: #8d6a94;
+  background-color: #5ca5bb;
   border: none;
   padding: 1rem;
   border-radius: 1rem;
@@ -78,9 +80,9 @@ body #achievements {
   bottom: 1rem;
   right: 1rem;
   left: 50rem;
-  background-color: black;
+  background-color: rgb(40, 62, 75);
   z-index: 99;
-  border: 1rem solid blue;
+  border: 1rem solid rgb(42, 88, 119);
   display: grid;
   grid-template-columns: repeat(auto-fill, 5rem);
   grid-template-rows: repeat(auto-fill, 5rem);
@@ -88,7 +90,7 @@ body #achievements {
   gap: 1rem;
 }
 body #achievements .achievementItem {
-  border: 0.5rem solid teal;
+  border: 0.5rem solid rgb(14, 92, 92);
   width: 5rem;
   height: 5rem;
   padding: 1rem;
@@ -222,7 +224,11 @@ body .bonusButton {
     height: auto;
   }
   body #shop {
-    height: 80vh;
+    height: 100vh;
     overflow-y: auto;
+    padding: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
   }
 }/*# sourceMappingURL=style.css.map */
