--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,7 @@ body{
     min-height:100vh;
     min-width:100vw;
     overflow-x:hidden;
-    background-color:#e1bfe6;
+    background-color:#4f6c74;
     display:flex;
     justify-content: space-evenly;
     align-items:center;
@@ -19,6 +19,8 @@ body{
     font-family:inter;
     font-weight:bold;
     padding:1rem;
+    margin:0;
+    padding:0;
 
 
     #main{
@@ -55,7 +57,7 @@ body{
         color:white;
         font-size:1.7rem;
         font-weight:bolder;
-        text-shadow:0.1rem 0.1rem 0 rgb(175, 105, 140);
+        text-shadow:0.1rem 0.1rem 0 rgb(72, 128, 155);
 
     }
 }
@@ -64,7 +66,7 @@ body{
     position:absolute;
     top:2rem;
     left:2rem;
-    background-color:#8d6a94;
+    background-color:#5ca5bb;
     border:none;
     padding:1rem;
     border-radius:1rem;
@@ -75,7 +77,7 @@ body{
     position:absolute;
     top:2rem;
     left:7rem;
-    background-color:#8d6a94;
+    background-color:#5ca5bb;
     border:none;
     padding:1rem;
     border-radius:1rem;
@@ -88,9 +90,9 @@ body{
     bottom:1rem;
     right:1rem;
     left:50rem;
-    background-color:black;
+    background-color:rgb(40, 62, 75);
     z-index:99;
-    border:1rem solid blue;
+    border:1rem solid rgb(42, 88, 119);
     display:grid;
     grid-template-columns: repeat(auto-fill, 5rem);
     grid-template-rows: repeat(auto-fill, 5rem);
@@ -98,7 +100,7 @@ body{
     gap: 1rem;
 
     .achievementItem{
-        border:0.5rem solid teal;
+        border:0.5rem solid rgb(14, 92, 92);
         width: 5rem;
         height: 5rem;
         padding:1rem;
@@ -261,8 +263,12 @@ body{
         }
 
         #shop{
-            height:80vh;
+            height:100vh;
             overflow-y:auto;
+            padding:0;
+            right:0;
+            top:0;
+            bottom:0;
         }
     }
 }
