--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
   padding: 1rem;
   margin: 0;
   padding: 0;
+  background-size: cover;
+  background-image: url("./assets2/background.jpg");
 }
 body #main {
   display: flex;
@@ -48,41 +50,45 @@ body #main #mainClicker:active {
   transform: scale(0.9);
   transition: 0.3s;
 }
-body #main #score, body #main #perSec {
+body #main #score,
+body #main #perSec {
   color: white;
   font-size: 1.7rem;
   font-weight: bolder;
-  text-shadow: 0.1rem 0.1rem 0 rgb(72, 128, 155);
+  text-shadow: 0.1rem 0.1rem 0.5rem rgb(14, 14, 14);
 }
 body #reset {
   position: absolute;
   top: 2rem;
   left: 2rem;
-  background-color: #5ca5bb;
+  background-color: #2c2c2c;
   border: none;
   padding: 1rem;
-  border-radius: 1rem;
+  border: 1px solid rgba(161, 161, 161, 0.486);
   color: white;
 }
 body #seeachievements {
   position: absolute;
   top: 2rem;
   left: 7rem;
-  background-color: #5ca5bb;
+  background-color: #2c2c2c;
   border: none;
   padding: 1rem;
-  border-radius: 1rem;
+  border: 1px solid rgba(161, 161, 161, 0.486);
   color: white;
 }
 body #achievements {
   position: absolute;
-  top: 1rem;
-  bottom: 1rem;
+  top: 6rem;
+  left: 1rem;
   right: 1rem;
-  left: 50rem;
-  background-color: rgb(40, 62, 75);
+  bottom: 1rem;
+  background-color: rgba(46, 46, 46, 0.61);
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+  border-radius: 1rem;
   z-index: 99;
-  border: 1rem solid rgb(42, 88, 119);
+  border: 0.1rem solid rgba(136, 136, 136, 0.144);
   display: grid;
   grid-template-columns: repeat(auto-fill, 5rem);
   grid-template-rows: repeat(auto-fill, 5rem);
@@ -90,16 +96,42 @@ body #achievements {
   gap: 1rem;
 }
 body #achievements .achievementItem {
-  border: 0.5rem solid rgb(14, 92, 92);
+  border: 0.1rem solid rgba(139, 139, 139, 0.445);
+  border-radius: 5rem;
   width: 5rem;
   height: 5rem;
   padding: 1rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body #achievements .achievementItem .description {
+  background-color: rgba(145, 145, 145, 0.205);
+  text-transform: none;
+  font-weight: lighter;
+  position: absolute;
+  left: -85%;
+  top: 6rem;
+  padding: 1rem;
+  z-index: 2;
+  width: 15rem;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  border: 0.1em solid rgb(94, 94, 94);
+  pointer-events: none;
+  display: none;
+  text-align: left;
+  color: white;
 }
 body #achievements .achievementItem .achievementimg {
   width: 2rem;
   height: 2rem;
   -o-object-fit: cover;
      object-fit: cover;
+}
+body #achievements .achievementItem:hover .description {
+  display: block;
 }
 body #achievements.invisible {
   display: none;
@@ -119,19 +151,22 @@ body #upgrades .upgrade {
   position: relative;
 }
 body #upgrades .upgrade .description {
-  background-color: black;
+  background-color: rgba(145, 145, 145, 0.205);
   text-transform: none;
-  font-weight: normal;
+  font-weight: lighter;
   position: absolute;
-  left: -85%;
-  top: 0;
+  left: -70%;
+  top: 0rem;
   padding: 1rem;
   z-index: 2;
   width: 15rem;
-  border: 0.5em solid teal;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  border: 0.1em solid rgb(94, 94, 94);
   pointer-events: none;
   display: none;
   text-align: left;
+  color: white;
 }
 body #upgrades .upgrade:hover .description {
   display: block;
@@ -148,9 +183,11 @@ body .disabled {
   pointer-events: none;
   opacity: 0.4;
   transition: 0.3s;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
 }
 body .disabled .prix {
-  color: rgb(107, 22, 146);
+  color: rgb(216, 201, 223);
   font-weight: bold;
 }
 body .hidden {
@@ -159,6 +196,8 @@ body .hidden {
 body #shop {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   right: 1rem;
   top: 1rem;
   bottom: 1rem;
@@ -168,20 +207,25 @@ body #shop .controller {
   height: 5rem;
   width: 25rem;
   position: relative;
-  background-color: rgb(156, 113, 180);
+  background-color: rgba(46, 46, 46, 0.61);
   border: 0;
-  padding: 2em;
-  border-radius: 1rem;
-  border: 1rem solid rgb(156, 113, 180);
-  box-shadow: 0 0.5rem rgb(75, 47, 94);
+  color: white;
+  padding: 1rem;
+  background-clip: padding-box;
+  border: 0.1rem solid rgba(66, 58, 58, 0.486);
+  box-shadow: 0 0.5rem rgb(96, 92, 99), inset 0 0 3rem rgba(255, 255, 255, 0.01);
   transition: 0.3s;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
   background-repeat: no-repeat;
-  background-size: auto 100%;
+  background-size: auto 60%;
+  background-position: 1.5rem center;
+  text-shadow: 2px 2px 8px black;
 }
 body #shop .controller .multname {
   font-size: 1.5rem;
   position: absolute;
-  top: 0rem;
+  top: 1rem;
   left: 5rem;
   color: white;
   font-weight: bold;
@@ -189,24 +233,28 @@ body #shop .controller .multname {
 }
 body #shop .controller .valeur {
   position: absolute;
-  right: 0rem;
-  top: 0rem;
+  right: 1rem;
+  top: 1rem;
 }
 body #shop .controller .cont {
   position: absolute;
-  bottom: 0em;
-  right: 0em;
+  bottom: 1rem;
+  right: 1rem;
   font-size: 1.5rem;
   font-weight: bold;
 }
 body #shop .controller .prix {
   position: absolute;
-  bottom: 0em;
+  bottom: 1em;
   left: 5rem;
   font-weight: bold;
 }
 body .bonusButton {
-  background-color: blue;
+  background-color: transparent;
+  background-image: url("./assets2/bonus.png");
+  background-size: 100% auto;
+  height: 5rem;
+  width: 5rem;
   color: white;
   padding: 1em;
   position: absolute;
