--- a/style.scss
+++ b/style.scss
@@ -1,274 +1,328 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Merriweather:ital,wght@1,900&display=swap');
 
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    list-style-type:none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style-type: none;
 }
 
-body{
-    min-height:100vh;
-    min-width:100vw;
-    overflow-x:hidden;
-    background-color:#4f6c74;
-    display:flex;
+body {
+    min-height: 100vh;
+    min-width: 100vw;
+    overflow-x: hidden;
+    background-color: #4f6c74;
+    display: flex;
     justify-content: space-evenly;
-    align-items:center;
+    align-items: center;
     flex-direction: column;
-    font-family:inter;
-    font-weight:bold;
-    padding:1rem;
-    margin:0;
-    padding:0;
+    font-family: inter;
+    font-weight: bold;
+    padding: 1rem;
+    margin: 0;
+    padding: 0;
+    background-size: cover;
+    background-image: url("./assets2/background.jpg");
 
 
-    #main{
-        display:flex;
-        flex-direction:column;
+    #main {
+        display: flex;
+        flex-direction: column;
         justify-content: flex-start;
-        margin-top:6rem;
+        margin-top: 6rem;
         align-items: center;
 
-    #mainClicker{
-        background-color:transparent;
-        border:none;
-        height:20rem;
-        width:20rem;
-        margin-top:5rem;
-        margin-bottom:5rem;
-        background-image:url(./assets2/Gumball.png);
-        background-size:auto 100%;
-        background-repeat:no-repeat;
-        transition: 0.3s;
+
+        #mainClicker {
+            background-color: transparent;
+            border: none;
+            height: 20rem;
+            width: 20rem;
+            margin-top: 5rem;
+            margin-bottom: 5rem;
+            background-image: url(./assets2/Gumball.png);
+            background-size: auto 100%;
+            background-repeat: no-repeat;
+            transition: 0.3s;
+        }
+
+        #mainClicker:hover {
+            transform: scale(1.2);
+            transition: 0.3s;
+        }
+
+        #mainClicker:active {
+            transform: scale(0.9);
+            transition: 0.3s;
+        }
+
+        #score,
+        #perSec {
+            color: white;
+            font-size: 1.7rem;
+            font-weight: bolder;
+            text-shadow: 0.1rem 0.1rem 0.5rem rgb(14, 14, 14);
+
+        }
     }
 
-    #mainClicker:hover{
-        transform: scale(1.2);
-        transition: 0.3s;
+    #reset {
+        position: absolute;
+        top: 2rem;
+        left: 2rem;
+        background-color: #2c2c2c;
+        border: none;
+        padding: 1rem;
+        border: 1px solid rgba(161,
+                161,
+                161,
+                0.486);
+        color: white;
     }
 
-    #mainClicker:active{
-        transform: scale(0.9);
-        transition: 0.3s;
+    #seeachievements {
+        position: absolute;
+        top: 2rem;
+        left: 7rem;
+        background-color: #2c2c2c;
+        border: none;
+        padding: 1rem;
+        border: 1px solid rgba(161,
+                161,
+                161,
+                0.486);
+        color: white;
     }
 
-    #score, #perSec{
-        color:white;
-        font-size:1.7rem;
-        font-weight:bolder;
-        text-shadow:0.1rem 0.1rem 0 rgb(72, 128, 155);
+    #achievements {
+        position: absolute;
+        top: 6rem;
+        left: 1rem;
+        right: 1rem;
+        bottom: 1rem;
+        background-color: rgba(46, 46, 46, 0.61);
+        backdrop-filter: blur(15px);
+        border-radius: 1rem;
+        z-index: 99;
+        border: 0.1rem solid rgba(136, 136, 136, 0.144);
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 5rem);
+        grid-template-rows: repeat(auto-fill, 5rem);
+        padding: 1rem;
+        gap: 1rem;
 
-    }
-}
+        .achievementItem {
+            border: 0.1rem solid rgba(139, 139, 139, 0.445);
+            border-radius: 5rem;
+            width: 5rem;
+            height: 5rem;
+            padding: 1rem;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
-#reset{
-    position:absolute;
-    top:2rem;
-    left:2rem;
-    background-color:#5ca5bb;
-    border:none;
-    padding:1rem;
-    border-radius:1rem;
-    color:white;
-}
+            .description {
+                background-color: rgba(145, 145, 145, 0.205);
+                text-transform: none;
+                font-weight: lighter;
+                position: absolute;
+                left: -85%;
+                top: 6rem;
+                padding: 1rem;
+                z-index: 2;
+                width: 15rem;
+                backdrop-filter: blur(10px);
+                border: 0.1em solid rgb(94, 94, 94);
+                pointer-events: none;
+                display: none;
+                text-align: left;
+                color: white;
+            }
 
-#seeachievements{
-    position:absolute;
-    top:2rem;
-    left:7rem;
-    background-color:#5ca5bb;
-    border:none;
-    padding:1rem;
-    border-radius:1rem;
-    color:white;
-}
+            .achievementimg {
+                width: 2rem;
+                height: 2rem;
+                object-fit: cover;
+            }
 
-#achievements{
-    position:absolute;
-    top:1rem;
-    bottom:1rem;
-    right:1rem;
-    left:50rem;
-    background-color:rgb(40, 62, 75);
-    z-index:99;
-    border:1rem solid rgb(42, 88, 119);
-    display:grid;
-    grid-template-columns: repeat(auto-fill, 5rem);
-    grid-template-rows: repeat(auto-fill, 5rem);
-    padding:1rem;
-    gap: 1rem;
 
-    .achievementItem{
-        border:0.5rem solid rgb(14, 92, 92);
-        width: 5rem;
-        height: 5rem;
-        padding:1rem;
 
-    .achievementimg{
-        width:2rem;
-        height:2rem;
-        object-fit:cover;
-    }
+        }
 
-  
-   
-}
+        .achievementItem:hover .description {
 
-}
-#achievements.invisible{
-    display:none;
-}
+            display: block;
 
-#upgrades{
-    display:grid;
-    max-width:50vw;
-    gap:1rem;
-
-    .upgrade{
-        border:0;
-        padding:1rem;
-        border-radius:1rem;
-        color:white;
-        font-weight:bold;
-        text-transform:uppercase;
-        position:relative;
-
-        .description{
-            background-color:black;
-            text-transform:none;
-            font-weight:normal;
-            position:absolute;
-            left:-85%;
-            top:0;
-            padding:1rem;
-            z-index:2;
-            width:15rem;
-            border:0.5em solid teal;
-            pointer-events:none;
-            display:none;
-            text-align:left;
         }
 
     }
 
-    .upgrade:hover .description{
-       
-            display:block;
-
+    #achievements.invisible {
+        display: none;
     }
 
-    .locked{
-        background-color:rgb(121, 80, 197); 
-        box-shadow:0 0.5rem 0 rgb(61, 26, 71);  
+    #upgrades {
+        display: grid;
+        max-width: 50vw;
+        gap: 1rem;
+
+        .upgrade {
+            border: 0;
+            padding: 1rem;
+            border-radius: 1rem;
+            color: white;
+            font-weight: bold;
+            text-transform: uppercase;
+            position: relative;
+
+            .description {
+                background-color: rgba(145, 145, 145, 0.205);
+                text-transform: none;
+                font-weight: lighter;
+                position: absolute;
+                left: -70%;
+                top: 0rem;
+                padding: 1rem;
+                z-index: 2;
+                width: 15rem;
+                backdrop-filter: blur(10px);
+                border: 0.1em solid rgb(94, 94, 94);
+                pointer-events: none;
+                display: none;
+                text-align: left;
+                color: white;
+            }
+        }
+
+        .upgrade:hover .description {
+
+            display: block;
+
+        }
+
+        .locked {
+            background-color: rgb(121, 80, 197);
+            box-shadow: 0 0.5rem 0 rgb(61, 26, 71);
+        }
+
+        .unlocked {
+            background-color: rgb(224, 142, 33);
+            box-shadow: 0 0.5rem 0 rgb(146, 103, 24);
+        }
     }
 
-    .unlocked{
-        background-color:rgb(224, 142, 33); 
-        box-shadow:0 0.5rem 0 rgb(146, 103, 24);  
-    }
-}
-
-    .disabled{
+    .disabled {
         pointer-events: none;
-        opacity:0.4;
+        opacity: 0.4;
         transition: 0.3s;
+        backdrop-filter: blur(20px);
 
-        .prix{
-            color:rgb(107, 22, 146);
-            font-weight:bold;
+        .prix {
+            color: rgb(216, 201, 223);
+            font-weight: bold;
         }
     }
 
-    .hidden{
-        display:none;
+    .hidden {
+        display: none;
     }
 
-    #shop{
-        display:flex;
+    #shop {
+        display: flex;
         flex-direction: column;
-        right:1rem;
-        top:1rem;
-        bottom:1rem;
+        align-items: center;
+        justify-content: center;
+        right: 1rem;
+        top: 1rem;
+        bottom: 1rem;
 
 
-    .controller{
-        margin:5px;
-        height:5rem;
-        width:25rem;
-        position:relative;
-        background-color: rgb(156, 113, 180);
-        border:0;
-        padding:2em;
-        border-radius:1rem;
-        border:1rem solid rgb(156, 113, 180);
-        box-shadow:0 0.5rem rgb(75, 47, 94);
-        transition: 0.3s;
-        background-repeat:no-repeat;
-        background-size:auto 100%;
+        .controller {
+            margin: 5px;
+            height: 5rem;
+            width: 25rem;
+            position: relative;
+            background-color: rgba(46, 46, 46, 0.61);
+            border: 0;
+            color: white;
+            padding: 1rem;
+            background-clip: padding-box;
+            border: 0.1rem solid rgba(66, 58, 58, 0.486);
+            box-shadow: 0 0.5rem rgb(96, 92, 99), inset 0 0 3rem rgba(255, 255, 255, 0.01);
+            transition: 0.3s;
+            backdrop-filter: blur(20px);
+            background-repeat: no-repeat;
+            background-size: auto 60%;
+            background-position: 1.5rem center;
+            text-shadow: 2px 2px 8px black;
 
-        .multname{
-            font-size:1.5rem;
-            position:absolute;
-            top:0rem;
-            left:5rem;
-            color:white;
-            font-weight:bold;
-            text-shadow: 1px 1px 0 black;
+            .multname {
+                font-size: 1.5rem;
+                position: absolute;
+                top: 1rem;
+                left: 5rem;
+                color: white;
+                font-weight: bold;
+                text-shadow: 1px 1px 0 black;
+            }
+
+            .valeur {
+                position: absolute;
+                right: 1rem;
+                top: 1rem;
+            }
+
+            .cont {
+                position: absolute;
+                bottom: 1rem;
+                right: 1rem;
+                font-size: 1.5rem;
+                font-weight: bold;
+            }
+
+            .prix {
+                position: absolute;
+                bottom: 1em;
+                left: 5rem;
+                font-weight: bold;
+            }
         }
 
-        .valeur{
-            position:absolute;
-            right:0rem;
-            top:0rem;
-        }
+    }
 
-        .cont{
-            position:absolute;
-            bottom:0em;
-            right:0em;
-            font-size:1.5rem;
-            font-weight:bold;
-        }
-
-        .prix{
-            position:absolute;
-            bottom:0em;
-            left:5rem;
-            font-weight:bold;
-        }
+    .bonusButton {
+        background-color: transparent;
+        background-image: url("./assets2/bonus.png");
+        background-size: 100% auto;
+        height: 5rem;
+        width: 5rem;
+        color: white;
+        padding: 1em;
+        position: absolute;
+        border: none;
+        border-radius: 10px;
     }
 
 }
 
-.bonusButton{
-    background-color:blue;
-    color:white;
-    padding:1em;
-    position:absolute;
-    border:none;
-    border-radius:10px;
-}
-
-}
-
-@media screen and (min-width:1000px){
-    body{
-        flex-direction:row;
+@media screen and (min-width:1000px) {
+    body {
+        flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
 
-        #main{
-            height:auto;
+        #main {
+            height: auto;
         }
 
-        #shop{
-            height:100vh;
-            overflow-y:auto;
-            padding:0;
-            right:0;
-            top:0;
-            bottom:0;
+        #shop {
+            height: 100vh;
+            overflow-y: auto;
+            padding: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
         }
     }
 }
