--- a/style.scss
+++ b/style.scss
@@ -291,6 +291,14 @@ body {
 
     }
 
+    .popup_achiev{
+        display:block;
+        position:absolute;
+        right:1rem;
+        top:1rem;
+        background-color:yellow;
+    }
+
     .bonusButton {
         background-color: transparent;
         background-image: url("./assets2/bonus.png");
