--- a/style.scss
+++ b/style.scss
@@ -296,7 +296,12 @@ body {
         position:absolute;
         right:1rem;
         top:1rem;
-        background-color:yellow;
+        background-color:rgb(39, 39, 39);
+        color:beige;
+        font-family:inter;
+        padding:1rem;
+        width:100px;
+        border-radius:0 0 0 1rem;
     }
 
     .bonusButton {
